tweeks to build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,9 +14,13 @@ IF(Boost_FOUND)
 
   #build
   add_library(mpi_manager  mpi_manager.cpp)
-  target_link_libraries (mpi_manager ${boost_mpi_LIBRARY} ${boost_serialization_LIBRARY})
+  target_link_libraries (mpi_manager ${Boost_LIBRARIES} ${boost_serialization_LIBRARY})
+  target_link_libraries (mpi_manager ${math_rng_LIBRARIES} ${GSLCBLAS_LIBRARIES})
+  target_link_libraries (mpi_manager ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
   target_link_libraries (mpi_manager ${MPI_LIBRARIES})
 
-  install (TARGETS mpi_manager DESTINATION bin)
+  install(DIRECTORY ../include/ DESTINATION include
+    FILES_MATCHING PATTERN "*.hpp")
+  install (TARGETS mpi_manager DESTINATION lib)
 
 ENDIF()
