added few more tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ IF(Boost_FOUND)
 
   target_link_libraries (test_mpi_manager mpi_manager)
   target_link_libraries (test_mpi_manager ${Boost_LIBRARIES})
+  target_link_libraries (test_mpi_manager ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
   add_test(test-mpi_manager-lib ${CMAKE_BINARY_DIR}/bin/test_mpi_manager)
 
 ENDIF()
